--- a/src/app/features/recruiters/overview-recruiters/overview.component.html
+++ b/src/app/features/recruiters/overview-recruiters/overview.component.html
@@ -5,8 +5,8 @@
     </mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <mat-accordion>
-      <mat-expansion-panel *ngFor="let recruiter of recruiters">
+    <mat-accordion >
+      <mat-expansion-panel *ngFor="let recruiter of recruiters.content">
         <mat-expansion-panel-header>
           <mat-panel-title>
             {{recruiter?.agency}}
@@ -38,7 +38,10 @@
     </mat-accordion>
   </mat-card-content>
   <mat-card-actions>
+    <mat-paginator class="paginator" [length]="recruiters.totalElement"
+    [pageSize]="recruiters.sizeOfEachPage" [pageIndex]="pageIndex" (page)="handlePageEvent($event)">
 
+    </mat-paginator>
   </mat-card-actions>
 </mat-card>
 
