--- a/src/app/features/client/client.component.html
+++ b/src/app/features/client/client.component.html
@@ -1,5 +1,7 @@
 <nav mat-tab-nav-bar [tabPanel]="tabPanel">
-  <a mat-tab-link *ngFor="let link of links" [routerLink]="link.link" #rla [active]="rla.active">
+  <a mat-tab-link *ngFor="let link of links"
+    [routerLink]="link.link" #rla [active]="rla.active"
+    [disabled]="link.disabled">
     {{link.label}}
   </a>
 </nav>
