--- a/src/app/features/workLogs/work-logs.component.html
+++ b/src/app/features/workLogs/work-logs.component.html
@@ -1,1 +1,11 @@
-<p>work-logs works!</p>
+<nav mat-tab-nav-bar [tabPanel]="tabPanel">
+  <a mat-tab-link *ngFor="let link of links"
+  [routerLink]="link.link" #rla [active]="rla.active"
+  [disabled]="link.disabled">
+    {{link.label}}
+  </a>
+</nav>
+<mat-tab-nav-panel #tabPanel>
+  <router-outlet></router-outlet>
+</mat-tab-nav-panel>
+
