--- a/src/app/features/contracts/overview-contract/overview.component.html
+++ b/src/app/features/contracts/overview-contract/overview.component.html
@@ -34,9 +34,15 @@
         </div>
       </mat-expansion-panel>
     </mat-accordion>
+    <p class="empty-response" *ngIf="contracts.content && contracts.content.length <= 0">
+      No projects available
+    </p>
   </mat-card-content>
   <mat-card-actions>
+    <mat-paginator class="paginator" [length]="contracts.totalElement" *ngIf="contracts.content && contracts.content.length > 0"
+      [pageSize]="contracts.sizeOfEachPage" [pageIndex]="pageIndex" (page)="handlePageEvent($event)">
 
+      </mat-paginator>
   </mat-card-actions>
 </mat-card>
 
