fix: BETA version

--- a/src/app/features/client/overview-client/overview.component.html
+++ b/src/app/features/client/overview-client/overview.component.html
@@ -33,6 +33,9 @@
           <button mat-icon-button (click)="editClients(client?.id)">
             <mat-icon>edit</mat-icon>
           </button>
+          <button mat-icon-button (click)="deleteClient(client)">
+            <mat-icon>delete</mat-icon>
+          </button>
         </div>
       </mat-expansion-panel>
     </mat-accordion>
