--- a/src/app/features/contracts/add-contract/add-contract.component.scss
+++ b/src/app/features/contracts/add-contract/add-contract.component.scss
@@ -4,16 +4,17 @@
   border-radius: 15%;
 }
 
-.mat-mdc-form-field-type-mat-input {
+.mat-mdc-form-field-type-mat-input,
+.mat-mdc-form-field-type-mat-select {
   border-radius: 30%;
-  font-size: 2em;
+  font-size: 1.3em;
   width: 76%;
   margin: auto;
 }
 
 .btns {
   padding: 0.6em;
-  margin: 0.5em;
+  margin: 0.3em;
   border-radius: 15%;
 }
 
