--- a/src/app/features/recruiters/edit-recruiter/edit-recruiter.component.scss
+++ b/src/app/features/recruiters/edit-recruiter/edit-recruiter.component.scss
@@ -4,7 +4,8 @@
   border-radius: 15%;
 }
 
-.mat-mdc-form-field-type-mat-input {
+.mat-mdc-form-field-type-mat-input,
+.mat-mdc-form-field-type-mat-select {
   border-radius: 30%;
   font-size: 1.3em;
   width: 76%;
