--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,24 +30,17 @@ $dark-theme: mat.define-dark-theme(
 );
 
 :root {
-  --primary-light: var($light-primary);
-  --primary-dark: var($dark-primary);
+  --primary-light: rgb(255, 255, 255);
+  --primary-dark: rgb(51, 51, 51);
 }
 
 .primary-light {
   box-shadow: var(--primary-light) 4px 2px 4px 2px;
-
-  /* &.mdc-tab--active {
-    background-color: red;
-    color: var(--primary-light);
-  } */
 }
 
 .primary-dark {
   box-shadow: var(--primary-dark) 4px 2px 4px 2px;
 }
-
-
 
 .color-scheme-dark {
   @include mat.all-component-themes($dark-theme);
@@ -59,6 +52,7 @@ $dark-theme: mat.define-dark-theme(
 
 .color-scheme-light {
   @include mat.all-component-themes($light-theme);
+
   .card-wrapper {
     color: #2d2d2d;
   }
